# AI-ReportGenerator

./: .dockerignore  .env.example  .gitignore  CHANGELOG_MEMORY_OPTIMIZATION.md  Cargo.toml  DOCKER-DEPLOYMENT.md  Dockerfile  Dockerfile.optimized  MEMORY_OPTIMIZATION_QUICKSTART.md  MEMORY_OPTIMIZATION_SUMMARY.md  README.md  REDIS_MEMORY_FIX.md  SCHEDULER_FIXED_TIMES.md  WORKFLOW_VALIDATION_REPORT.md  ai_report.db  deploy.sh  docker-compose.override.yml  docker-compose.yml  docker-entrypoint.sh  health-debug.sh  main.py  python-app-README.md  railway.json  requirements.txt  run.py  setup.py  test-docker-config.sh  test_memory_optimization.py  test_redis_memory_fix.py  test_scheduler_fixed_times.py  test_workflow_dry_run.py  test_workflow_retry_scenarios.py
.agent/rules/: rust-rules.md
.github/workflows/: rust-cd.yml
app/db/: session.py
app/models/: __init__.py
app/routers/: __init__.py  articles.py  market.py  reports.py
app/schemas/: article.py  report.py
app/services/: __init__.py  article_service.py  auto_report_scheduler.py  google_indexing.py  progress_tracker.py  report_service.py  report_workflow.py  taapi.py  vnstock_service.py
app/services/workflow_nodes/: __init__.py  base.py  create_interface.py  create_interface_components.py  extract_code.py  generate_report_content.py  prepare_data.py  research_deep.py  save_database.py  save_database_old.py  translate_content.py  validate_report.py
app/static/: index.html
app/static/css/: colors.css  style.css
app/utils/: __init__.py  prompt_env_loader.py
docs/: ARCHITECTURE.md  MEMORY_OPTIMIZATION.md  MEMORY_OPTIMIZATION_DIAGRAMS.md  RAILWAY_CLI_UPLOAD.md  UPDATES.md  WORKFLOW.md
rust_app/: Cargo.toml
rust_app/src/: main.rs
rust_app/src/api/: mod.rs
rust_app/src/db/: models.rs
rust_app/src/services/: mod.rs
scripts/: railway_upload_prompt_envs.sh  railway_upload_service_account.sh
src/: lib.rs  main.rs
src/api/: handlers.rs  mod.rs  progress.rs
src/db/: init.rs  mod.rs  models.rs
src/scheduler/: mod.rs
src/static/: index.html
src/workflow/: mod.rs  routing.rs  state.rs
src/workflow/nodes/: create_interface.rs  extract_code.rs  generate_content.rs  mod.rs  prepare_data.rs  report_writer.rs  research_deep.rs  research_macro.rs  research_tech.rs  translate.rs  utils.rs  validate_report.rs
src/workflow/prompts/: interface.rs  mod.rs  report.rs  report_validator.rs  report_writer.rs  research.rs  research_macro.rs  research_tech.rs  translation.rs
