[package]
name = "ai-report-generator"
version = "0.1.0"
edition = "2021"
description = "AI Report Generator - Rust implementation for workflow, scheduler, and database"
authors = ["ThiChuong"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Redis streams via multi-tier-cache
multi-tier-cache = "0.5"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP client (for Gemini API)
reqwest = { version = "0.12", features = ["json"] }

# Regex for code extraction
regex = "1"

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "ai-report-generator"
path = "src/main.rs"
