[package]
name = "ai-report-generator"
version = "0.1.0"
edition = "2024"
description = "AI Report Generator - Rust implementation for workflow, scheduler, and database"
authors = ["ThiChuong"]

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Database
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Redis streams via multi-tier-cache
multi-tier-cache = "0.6.4"
bytes = "1.6"


# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# UUID
uuid = { version = "1.13", features = ["v4", "serde"] }

# HTTP client (for Gemini API)
reqwest = { version = "0.12", features = ["json"] }

# Regex for code extraction
regex = "1.11"

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

[dev-dependencies]
tokio-test = "0.4.3"

[[bin]]
name = "ai-report-generator"
path = "src/main.rs"

[lints.clippy]
pedantic = "warn"

unwrap_used = "warn"
expect_used = "warn"
indexing_slicing = "warn"